# physiotrack

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: 3dpose.py  canonical_pose.py  detection.py  evaluate_pose.py  face3d.py  full_inference.py  motion.py  pose.py  pose_video.py  segmentation_example.py  tracker_aided_pose_video.py
src/physiotrack/: __init__.py  models.py
src/physiotrack/capture/: video.py
src/physiotrack/core/: __init__.py  inference.py  radar_view.py
src/physiotrack/detect/: __init__.py  detect.py
src/physiotrack/face/: __init__.py  detect.py  face_orientation.py
src/physiotrack/modules/: __init__.py
src/physiotrack/modules/DDHPose/: inference.py
src/physiotrack/modules/MotionBERT/: inference.py
src/physiotrack/modules/Sapiens/: __init__.py  classes_and_palettes.py  common.py  pose.py  segment.py
src/physiotrack/modules/ViTPose/: inference.py
src/physiotrack/modules/Yolo/: __init__.py  classes_and_palettes.py  detect.py  pose.py  segment.py
src/physiotrack/modules/_3DCPNet/: inference.py
src/physiotrack/modules/_6DRepNet360/: __init__.py  inference.py  model.py  utils.py
src/physiotrack/pose/: __init__.py  canonicalizer.py  config.py  evaluate.py  pose.py  pose3D.py  utils.py
src/physiotrack/segment/: __init__.py  segment.py
src/physiotrack/signals/: evaluate.py  filters.py  normalize.py
src/physiotrack/signals/filters/: __init__.py  filters.py
src/physiotrack/trackers/: __init__.py  config.py  track.py
src/physiotrack/utils/: __init__.py  logger.py  sapiens_post_process.py  spatial_transforms.py
(+38 files in other folders)
